Beluga Player 0.12

* Add support for AAC
* Remove pause button (unreliable)
* Add stations management menu
* Add predefined stations
* Load album art asynchronously
* Remove portaller (abandoned)
* Add support for socks5 proxy

Beluga Player 0.11

* Fix startup bug with Java version
* Fix configuration version support

Beluga Player 0.10

* Add portaller support
* Fix race condition
* Fix DNS cache invalidation

Beluga Player 0.9

* Prevent ads scrobbling
* Fix Like button
* Fix notification window type
* Allow to disable notifications
* Improve station selection (search)
* Remove volume control

Beluga Player 0.8

* Add basic ads detection
* Add Home button
* Fix reconnection bug
* Enable anti-aliasing
* Reduce CPU usage
* Add new style for notifications
* Add new logo
* Better resize support
* Add logs screen

Beluga Player 0.7

* Add support for QuickMix edition
* Fix ProxyDNS IP blacklisting
* Improve stream buffering
* Fix new accounts bug
* Update Tunlr IP addresses
* Add pause button
* Add Debian package

Beluga Player 0.6

* GUI now uses Apache Pivot
* Built-in MP3 player based on JLayer
* Playback use MP3 format instead of AAC
* Better cache support
* Improved DNS Proxy support
* Add LastFM support
* Global responsiveness improvement