@@ -1,0 +1,41 @@
+/*
+ * Copyright (C) 2012-2020 Julien Bonjean <julien@bonjean.info>
+ *
+ * This file is part of Beluga Player.
+ *
+ * This program is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 3 of the License, or (at your option) any later
+ * version.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+ * details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * this program; if not, write to the Free Software Foundation, Inc., 51
+ * Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+ */
+package info.bonjean.beluga.request;
+
+public class RenameStationRequest extends AuthentifiedJsonRequest {
+	private String stationName;
+	private String stationToken;
+
+	public String getStationName() {
+		return stationName;
+	}
+
+	public void setStationName(String stationName) {
+		this.stationName = stationName;
+	}
+
+	public String getStationToken() {
+		return stationToken;
+	}
+
+	public void setStationToken(String stationToken) {
+		this.stationToken = stationToken;
+	}
+}
